kubernetes/apps/monitoring/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
    istio.io/dataplane-mode: ambient
# ---
# apiVersion: apiserver.config.k8s.io/v1
# kind: AdmissionConfiguration
# metadata:
#   name: pod-sec
# plugins:
#   - name: PodSecurity
#     configuration:
#       defaults:
#         enforce: "privileged"  # Change from baseline to privileged
#         enforce-version: "latest"
#       exemptions:
#         usernames: []
#         runtimeClasses: []
#         namespaces: [monitoring]  # Add your namespace here
